Cambio de colores rojo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         theme: {
           extend: {
             colors: {
-              "primary": "#CF2E2E",
+              "primary": "#CF5029",
               "accent": "#FF6900",
               "text-header": "#005A87",
               "background-light": "#F8F9FA",
